# django-user-service

./: .gitignore  ProductAPI.http  README.md  docker-compose.yml  mypy.ini  pyproject.toml
user_service/: settings.py  urls.py
usercore/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
usercore/migrations/: 0001_initial.py
